# zigcc-build

./: .gitignore  README.md  pyproject.toml  test_comprehensive_metadata.py  test_metadata.py
.github/workflows/: release.yml  test.yml
demo-project/: README.md  configure.py  pyproject.toml
demo-project/src/: hello.c
demo-project/src/demo_package/: utils.py
demo-project/tests/: test_hello.py
src/zigcc_build/: __init__.py  backend.py  config.py
